# pdbarray

./: README.md  demo.ipynb  pyproject.toml
pdbarray/: __init__.py  core.py
