[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdbarray"
version = "0.1.0"
description = "A library that provides a dual-interface for PDB structures - acting both as a string and a numpy array"
readme = "README.md"
authors = [
    {name = "log-md", email = "alexander.mathiasen@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "MDAnalysis",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/log-md/pdbarray"
"Bug Tracker" = "https://github.com/log-md/pdbarray/issues"
